# S61-0126-Artivo-AngularAndRust-CraftOrigin

./: .gitignore  ADMIN_WORKFLOW.md  DOCKER_GUIDE.md  Readme.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml  seed_data.sql
backend/.sqlx/: query-01edaa07b7c22d31fce4a187f95c87a5d01bb5a9b40ef8719793111884bb9d77.json  query-0d31f3cc27e85532d822a8a13e91f262c5a312bc2ad24c306c46010940681d1f.json  query-37468ffe62d0dee0e85cf38be731944fab0b68abc8cf25ca5c4bf4f2b2324de4.json  query-438a245013285c30616d4594ec4e4f8f0904172e2a4ba26e4f54ca5b7e2dcb3f.json  query-43f4a9fc349297bc27d8fefcc2f98fd88838ca41343f0c48b48e47269375c213.json  query-4cdbf145bf447e6ab98600d4ad421bebda5adc67c32e820167614be107c4c6c9.json  query-5109abfec40e64a28459b093cea50769bb73c10db8bc278cc1410707dfe95507.json  query-5449790dc4c77cb7a48b9654ef788c3c3792acfcaa33f127ce434820ba536904.json  query-5f86d992464537fd22932b83226f0b944099b10a304716cbd068f4c50acba63d.json  query-64c364e709a9bcfe8112307429d2e4ca86a305d132f4acf3334de4f3f5fd4ab9.json  query-6c5945710b0f3f0bb318f0a1ad081eddb790755f1d555b4620d49231e8fdc79f.json  query-7c6ec37ea70c962e1be69ff28b0b915fe56192b679867b035c648780dc06587e.json  query-821d389d6433d8cc9aaa18a2ea07c4cabdf64be1ca3737b6147aee583ef12618.json  query-8dc7eb7a39a05411b9e56df168dc92dbf2cccfd293765a7780f7944c42eb9c3f.json  query-8df73e322e21c3dd688ddc90fe219191edd08173bd5faa701183cbad140d59ff.json  query-a4405024e641e99f1ce5ed40eda8f026603c008b5473b21690965ed96c1629a8.json  (+14 more)
backend/migrations/: 0002_marketplace_schema.sql  (+2 more)
(+184 files in other folders)
