[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "migrate"] }
dotenvy = "0.15"
