[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["macros"] }
actix-cors = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono", "rust_decimal"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
actix-files = "0.6"
actix-multipart = "0.6"
futures = "0.3"
jsonwebtoken = { version = "10.3.0", features = ["use_pem", "rust_crypto"] }
argon2 = "0.5.3"
rand = "0.9.2"

